# aws-cpp-sdk-simple-samples

./: .gitignore  README.md
dynamodb/: CMakeLists.txt  main.cpp
sqs/: CMakeLists.txt  main.cpp
